--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@
                         </div>
                         <div class="textLetter">
                             <!-- Thêm hình ảnh NY ở đây (thay src bằng URL hình ảnh thực của bạn, ví dụ: đường dẫn file local hoặc URL online) -->
-                            <img src="/image/❤️.jpeg" alt="Hình ảnh người yêu" class="girlfriend-image">
+                            <img src="/image/nhe.jpeg" alt="Hình ảnh người yêu" class="girlfriend-image">
                             <!-- Thêm hearts bay quanh -->
                             <div class="floating-hearts">💖</div>
                             <h2></h2>
